termino app, para empezar a unirle otros proyectos

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -19,10 +19,6 @@
             <img src="../../public/img/imgshare-logo.png" alt="imgShare">
             </a>
         </div>
-
-
-
-
     </nav>
 
     <div class="container p-4">
@@ -31,7 +27,9 @@
                 {{{ body }}}
             </div>
             <div class="col-md-4">
-
+                {{> stats  }}
+                {{>popular }}
+                {{>comments }}
             </div>
         </div>
     </div>
