--- a/src/views/partials/popular.hbs
+++ b/src/views/partials/popular.hbs
@@ -11,7 +11,7 @@
       {{#each sidebar.popular}}
         <div class="col-md-4">
           <a href="/images/{{uniqueId}}">
-            <img src="/public/upload/{{filename}}" class="w-100 h-100 image-thumbnail"><br>
+            <img src="/public/upload/{{filename}}" class="w-100 h-100 image-thumbnail">
           </a>
         </div>
       {{/each}}
